# kommo-kiro-power

./: .env.example  .gitignore  LICENSE  POWER.md  README.md  mcp.json  pyproject.toml
.atl/: skill-registry.md
.kiro/hooks/: lint-python.kiro.hook  review-tool-schema.kiro.hook  sync-readme.kiro.hook  validate-power-md.kiro.hook
.kiro/steering/: project-context.md
docs/: article-building-kiro-power-kommo.md
kommo_mcp/: __init__.py  __main__.py  kommo_client.py  mcp_server.py
kommo_mcp/tools/: __init__.py  contacts.py  leads.py  pipelines.py
scripts/: oauth_setup.py
steering/: automation-patterns.md  leads-workflow.md  pipeline-management.md
